--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ficha de datos :3</title>
+  <title>ficha de datos</title>
 </head>
 <body>
-  <h1>Ficha de Datos</h1>
+  <h1>Ficha de Datos!!!</h1>
     <div>
         <label for="nombre">Ingresa tu nombre:</label>
         <input type="text" id="nombre" />
