nuevo cambio a mi index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>ficha de datos</title>
 </head>
 <body>
-  <h1>Ficha de Datos!!!</h1>
+  <h1>Ficha de Datos!!!!! Oh dios Sube!!</h1>
     <div>
         <label for="nombre">Ingresa tu nombre:</label>
         <input type="text" id="nombre" />
