--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ficha de datos</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <h1>Ficha de Datos!!!!! Oh dios Sube!!</h1>
+  <h1>Ficha de Datos</h1>
     <div>
         <label for="nombre">Ingresa tu nombre:</label>
         <input type="text" id="nombre" />
