--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Ficha de Datos</h1>
     <div>
-        <label for="nombre">Ingresa tu nombre:</label>
+        <label id="ficha" for="nombre">Ingresa tu nombre:</label>
         <input type="text" id="nombre" />
     </div>
     <br>
@@ -23,7 +23,7 @@
     <br>
     <div>
         <label for="dni">Ingresa tu DNI:</label>
-        <input type="text" id="dni"></input>
+        <input type="texto" id="dni"></input>
     </div>
     <br>
     <br>
@@ -33,7 +33,7 @@
     </div>
         <br>
         <br>
-    <button onclick="enviaDatos(); return false">Enviar Datos</button>
+    <button id="boton">Enviar Datos</button>
 
   <div id="datos"></div>
   <script src= "assets/js/javascript.js"></script>
